# coinflip-gtk

./: .gitignore  LICENSE.md  README.md  com.github.jkotra.coinflip.json  com.github.jkotra.coinflip.yml  meson.build
data/: coinflip.gresource.xml
data/ui/: coinflip.glade  coinflip.ui
include/: main.h
po/: POTFILES  meson.build
src/: main.c  meson.build
